# PlugSim

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  run_tests.sh
.github/workflows/: jekyll.yml
docs/: Gemfile  _config.yml  cli-reference.md  container.md  getting-started.md  index.md
docs/_includes/: footer_custom.html  head_custom.html  nav_footer_custom.html
docs/_sass/custom/: custom.scss
docs/examples/: factory-world.md  index.md  melon-ros2.md
docs/plugin-system/: adding-a-plugin.md  index.md  metadata-schema.md
plugin/example_factory_world/: METADATA.yaml  app.py
plugsim/: __init__.py  cli.py  launcher.py  parser.py  scanner.py  schema.py
tests/: test_parser.py  test_scanner.py
