[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plugsim"
version = "1.0.0"
description = "METADATA.yaml-driven plugin orchestrator for Isaac Sim + ROS 2"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
plugsim = "plugsim.cli:main"

[tool.setuptools.packages.find]
include = ["plugsim*"]
